[package]
name = "chelaid"
version = "0.0.0"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
ctrlc = "3.4.5"
env_logger = "0.11.6"
log = "0.4.22"
rand = "0.8.5"
thiserror = "2.0.9"
